edit and update routes for collections, form formatting

--- a/views/collections/new.ejs
+++ b/views/collections/new.ejs
@@ -8,7 +8,7 @@
                 <label for="name">Name your collection</label>
                 <input type="text" name="collection[name]" placeholder="Pairs of socks">
             </div>
-            <input type="submit">
+            <input class="ui button" type="submit" value="Create Collection"> 
         </form>
     </div>
 </div>
