--- a/views/item/edit.ejs
+++ b/views/item/edit.ejs
@@ -69,7 +69,7 @@
                 <label for="item[description]">Add a description</label>
                 <textarea name="item[description]"><%= item.description %></textarea>
             </div>
-            <input class="ui button" type="submit">
+            <input class="ui button" type="submit" value="Update Item">
         </form>
     </div>
 </div>
