--- a/views/item/new.ejs
+++ b/views/item/new.ejs
@@ -69,7 +69,7 @@
                 <label for="item[description]">Add a description</label>
                 <textarea name="item[description]" placeholder="Pairs of socks"></textarea>
             </div>
-            <input type="submit">
+            <input class="ui button" type="submit" value="Create Item">
         </form>
     </div>
 </div>
