--- a/public/onus.css
+++ b/public/onus.css
@@ -192,7 +192,7 @@ i.circular.icon{
 }
 
 /* create tab form styles */
-.ui.placeholder.segment .field, .ui.placeholder.segment > .ui.input, .ui.placeholder.segment .button{
+.ui.placeholder.segment .field, .ui.placeholder.segment > .ui.input{
   max-width: 90%;
 }
 
@@ -221,4 +221,12 @@ i.circular.icon{
 
 form button.ui.left.floated.button{
   margin-left: 5% !important;
+}
+
+.inlineButton{
+  display: inline !important;
+}
+
+.buttons{
+  margin: .5em 1em !important;
 }
