--- a/views/landing/login.ejs
+++ b/views/landing/login.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="ui segment">
+<div class="ui container segment">
   <div class="ui huge header">Welcome!</div>
   <div class="ui header">Login</div>
   <form name="login_form" class="ui form" action="/login" method="POST">
