--- a/views/landing/register.ejs
+++ b/views/landing/register.ejs
@@ -1,24 +1,26 @@
 <% include ../partials/header %>
-<div class="ui header">Join</div>
-<form name="join_form" class="ui form" action="/register" method="POST">
-  <div class="field">
-    <label for="name">Name</label>
-    <input type="text" name="name" placeholder="Name" />
-  </div>
-  <div class="field">
-    <label for="username">Username</label>
-    <input type="text" name="username" placeholder="Username" />
-  </div>
-  <div class="field">
-    <label for="password">Password</label>
-    <input type="password" name="password" placeholder="Password" />
-  </div>
-  <div class="field">
-    <div class="ui checkbox">
-      <input type="checkbox" tabindex="0" class="hidden" />
-      <label>I agree to the Terms and Conditions</label>
+<div class="ui container segment">
+  <div class="ui header">Join</div>
+  <form name="join_form" class="ui form" action="/register" method="POST">
+    <div class="field">
+      <label for="name">Name</label>
+      <input type="text" name="name" placeholder="Name" />
     </div>
-  </div>
-  <button class="ui button" type="submit">Join</button>
-</form>
+    <div class="field">
+      <label for="username">Username</label>
+      <input type="text" name="username" placeholder="Username" />
+    </div>
+    <div class="field">
+      <label for="password">Password</label>
+      <input type="password" name="password" placeholder="Password" />
+    </div>
+    <div class="field">
+      <div class="ui checkbox">
+        <input type="checkbox" tabindex="0" class="hidden" />
+        <label>I agree to the Terms and Conditions</label>
+      </div>
+    </div>
+    <button class="ui button" type="submit">Join</button>
+  </form>
+</div>
 <% include ../partials/footer %>
