--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,31 +19,26 @@
                 <% if(!currentUser){ %>
                     <a href='/login'class="item"><i class="address card icon"></i> Log In</a>
                     <a href='/register'class="item"><i class="user plus icon"></i> Register</a>
+                </div>
+            </div>
                 <% } else { %>
                     <a href='/<%= currentUser._id %>'class="item"><i class="id card icon"></i> Profile</a>
                     <a href='/logout'class="item"><i class="address card outline icon"></i> Log Out</a>
-                <% } %>
+                </div>
+            </div>
+        <div class="item">
+            <h1 class="header">Logged in as:</h1>
+            <div class="menu">
+                <div class="item"><%= currentUser.name %></div>
             </div>
         </div>
         <div class="item">
-            <h1 class="header"><%= currentUser %></h1>
+            <h1 class="header">You own</h1>
             <div class="menu">
-                <a class="item">Kitchen</a>
-                <a class="item">Living Room</a>
-                <a class="item">Dining Room</a>
-                <a class="item">Bedroom</a>
-                <a class="item">Bathroom</a>
+                <div class="item"><%= currentUser.collections.length %> Collections</div>
             </div>
         </div>
-        <div class="item">
-            <h1 class="header">Work</h1>
-            <div class="menu">
-                <a class="item">Office</a>
-                <a class="item">Romney</a>
-                <a class="item">Storage</a>
-                <a class="item">Locker Room</a>
-            </div>
-        </div>
+        <% } %>
     </div>
     <div class="pusher">
         <div class="ui black launch right attached button">
