--- a/views/collections/edit.ejs
+++ b/views/collections/edit.ejs
@@ -4,11 +4,11 @@
     <h1>this is the collection/edit route</h1>
     <div class="ui segment">
         <form class="ui form" action="/<%= currentUser._id %>/collections/<%= collection._id %>?_method=PUT" method="POST">
-            <div class="form item">
+            <div class="field">
                 <label for="name">Change your collection name</label>
                 <input type="text" name="collection[name]" value="<%= collection.name %>">
             </div>
-            <input class="ui button" type="submit" value="Update Collection">
+            <button class="ui button" type="submit">Update Collection</button>
         </form>
     </div>
 </div>
